--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~11.0.4",
     "@angular/router": "~11.0.4",
     "bootstrap": "^5.0.0-beta1",
+    "intl": "^1.2.5",
     "jquery": "^3.5.1",
     "rxjs": "~6.6.0",
     "tether": "^1.4.7",
